--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -234,7 +234,7 @@
     align-items: center;
     justify-content: center;
     gap: 30px;
-    transition: 0.5s ease;
+    transition: 0.5 ease;
 }
 
 .service-img {
@@ -497,6 +497,10 @@ input[type="date"]:not(:placeholder-shown)::placeholder {
     visibility: hidden;
 }
 
+input[type="date"]:required:invalid::-webkit-datetime-edit {
+    color: transparent;
+}
+
 .form-input {
     display: flex;
     align-items: center;
@@ -509,7 +513,7 @@ input[type="date"]:not(:placeholder-shown)::placeholder {
     margin-bottom: 20px;
 }
 .post-meta span {
-    margin-right: 25px;
+    margin-right: 15px;
     color: #6c757d;
 }
 .post-content {
