--- a/src/main/webapp/common/sidebar.css
+++ b/src/main/webapp/common/sidebar.css
@@ -64,7 +64,6 @@ table {
     margin-bottom: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     table-layout: fixed;
-    text-align: center;
 }
 
 table th {
@@ -168,6 +167,8 @@ table tr:hover {
     color: #86b817;
 }
 
+
+
 .popup {
     position: fixed;
     top: 20px;
@@ -213,4 +214,20 @@ table tr:hover {
         opacity: 1;
         transform: translateY(0);
     }
+}
+
+form button[type="submit"] {
+    width: 100%;
+    padding: 10px;
+    background-color: #86b817;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+form button[type="submit"]:hover {
+    background-color: #688b12;
 }
