pre-final-project

--- a/src/main/webapp/common/sidebar.css
+++ b/src/main/webapp/common/sidebar.css
@@ -9,6 +9,7 @@ body {
 }
 
 .sidebar {
+    min-height: 100vw;
     width: 15%;
     background-color: #86b817;
     color: white;
@@ -253,3 +254,4 @@ form button[type="submit"]:hover {
 .user-info span {
     font-size: 18px;
 }
+
